[package]
name = "vkbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
vkclient = "5.1.2"
anyhow = "1.0.86"
futures-util = "0.3.30"
serde_json = "1.0.125"
teloxide = "0.13.0"
url = { version = "2.5.2", features = [] }
html-escape = "0.2.13"
regex = "1.10.6"
